--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -1,67 +1,123 @@
+<!DOCTYPE html>
 <html lang="ru-ru"><head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Менеджер задач Hexlet</title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
-    <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Менеджер задач</a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-        <ul class="navbar-nav mr-auto">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Менеджер задач Hexlet</title>
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
+  <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body class="d-flex flex-column min-vh-100">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Менеджер задач</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/users/">Пользователи</a>
+        </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="/users/">Пользователи</a>
+            <a class="nav-link" href="/statuses/">Статусы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/labels/">Метки</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tasks/">Задачи</a>
           </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="/statuses/">Статусы</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/labels/">Метки</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/tasks/">Задачи</a>
-            </li>
-
-        </ul>
-        <ul class="navbar-nav">
+      </ul>
+      <ul class="navbar-nav">
 
           <form action="/logout/" method="post">
-            <input type="hidden" name="csrfmiddlewaretoken" value="3LGQ6l52ipavbOlDWsYgwdhSqaa9iXy5X9oslTM5jhrlcjL1CMrMBPk8bY98GbnK">
+            <input type="hidden" name="csrfmiddlewaretoken" value="SNBxHXrfBzEpo0b5zNQ7dH31ijhH9gg1Mbj9Wv8iCrVfpvBtf7jDij6h37gGxu5G">
             <input class="btn nav-link" type="submit" value="Выход">
           </form>
 
-        </ul>
-      </div>
-    </nav>
-    <div class="container wrapper flex-grow-1">
+      </ul>
+    </div>
+  </nav>
+  <div class="container wrapper flex-grow-1">
 
 
 
-      <h1 class="my-4">
+    <h1 class="my-4">
+
+Задачи
+
+    </h1>
+
+<a class="btn btn-primary mb-3" href="/tasks/create/" role="button">Создать задачу</a>
 
 
-      </h1>
 
-<h1 class="my-4"></h1>
-<div class="card">
-  <div class="card-body p-5 bg-light">
-    <div class="display-4">Привет от Хекслета!</div>
-    <p class="lead">Практические курсы по программированию</p>
-    <hr>
-    <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">Узнать больше</a>
-  </div>
+
+<div class="card mb-3">
+<div class="card-body bg-light">
+  <form class="form-inline center" method="get">
+    <div class="mb-3"><label class="form-label" for="id_status">Статус</label><select name="status" class="form-select" id="id_status">
+<option value="" selected="">---------</option>
+</select></div>
+    <div class="mb-3"><label class="form-label" for="id_executor">Исполнитель</label><select name="executor" class="form-select" id="id_executor">
+<option value="" selected="">---------</option>
+</select></div>
+    <div class="mb-3"><label class="form-label" for="id_label">Метка</label><select name="label" class="form-select" id="id_label">
+<option value="" selected="">---------</option>
+
+<option value="1">Ленивый</option>
+
+<option value="2">Срочно</option>
+
+<option value="3">Не срочно</option>
+
+</select></div>
+    <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">Только свои задачи</label></div></div>
+      <input class="btn btn-primary" type="submit" value="Показать">
+  </form>
+</div>
 </div>
 
+
+<table class="table table-striped">
+<thead>
+  <tr>
+    <th>ID</th>
+    <th>Имя</th>
+    <th>Статус</th>
+    <th>Автор</th>
+    <th>Исполнитель</th>
+    <th>Дата создания</th>
+    <th></th>
+  </tr>
+</thead>
+<tbody>
+
+    <tr>
+      <td></td>
+      <td>
+        <a href=""></a>
+      </td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>
+        <a href="">Изменить</a>
+        <br>
+        <a href="">Удалить</a>
+      </td>
+    </tr>
+</tbody>
+</table>
+
+  </div>
+  <footer>
+    <div class="container my-5 pt-4 border-top">
+      <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
     </div>
-    <footer>
-      <div class="container my-5 pt-4 border-top">
-        <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
-      </div>
-    </footer>
+  </footer>
 
 
-</body></html>
+</body>
+</html>
