--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -1,43 +1,6 @@
-<!DOCTYPE html>
-<html lang="ru-ru"><head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Менеджер задач Hexlet</title>
-  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
-  <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Менеджер задач</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/users/">Пользователи</a>
-        </li>
+{% extends 'base.html' %}
+  {% block content %}
 
-          <li class="nav-item">
-            <a class="nav-link" href="/statuses/">Статусы</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/labels/">Метки</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/tasks/">Задачи</a>
-          </li>
-
-      </ul>
-      <ul class="navbar-nav">
-
-          <form action="/logout/" method="post">
-            <input type="hidden" name="csrfmiddlewaretoken" value="SNBxHXrfBzEpo0b5zNQ7dH31ijhH9gg1Mbj9Wv8iCrVfpvBtf7jDij6h37gGxu5G">
-            <input class="btn nav-link" type="submit" value="Выход">
-          </form>
-
-      </ul>
-    </div>
-  </nav>
   <div class="container wrapper flex-grow-1">
 
 
@@ -92,32 +55,27 @@
   </tr>
 </thead>
 <tbody>
-
+  {% for task in tasks %}
     <tr>
-      <td></td>
+      <td>{{task.id}}</td>
       <td>
-        <a href=""></a>
+         <a href="{% url 'task_show' id=task.id %}">{{task.name}}</a>
       </td>
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td>{{task.timestamp}}</td>
       <td>
         <a href="">Изменить</a>
         <br>
         <a href="">Удалить</a>
       </td>
     </tr>
+  {% endfor %}
 </tbody>
 </table>
 
   </div>
-  <footer>
-    <div class="container my-5 pt-4 border-top">
-      <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
-    </div>
-  </footer>
-
 
 </body>
-</html>
+{% endblock %}
