--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru-ru"><head>
+{% load django_bootstrap5 i18n %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+<html lang="{% get_current_language as LANGUAGE_CODE %}">
+  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Менеджер задач Hexlet</title>
+    <title>{% translate "Task manager Hexlet" %}</title>
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" rel="stylesheet">
     <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">Менеджер задач</a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/users/">Пользователи</a>
-          </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="/statuses/">Статусы</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/labels/">Метки</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/tasks/">Задачи</a>
-            </li>
-
-        </ul>
-        <ul class="navbar-nav">
-
-          <form action="/logout/" method="post">
-            <input type="hidden" name="csrfmiddlewaretoken" value="3LGQ6l52ipavbOlDWsYgwdhSqaa9iXy5X9oslTM5jhrlcjL1CMrMBPk8bY98GbnK">
-            <input class="btn nav-link" type="submit" value="Выход">
-          </form>
-        </ul>
-    </div>
-  </nav>
+    {% include 'navigation.html' %}
     {% block content %}
+    {% endblock content %}
     </body>
     <footer>
         <div class="container my-5 pt-4 border-top">
-          <a target="_blank" href="https://github.com/Krushovice">Мой GitHub</a>
+          <a target="_blank" href="https://github.com/Krushovice"> {% translate "My GitHub" %}</a>
         </div>
       </footer>
-    {% endblock content %}
 </html>
