Создана примитивная форма регистрации и обработка данных

--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -16,9 +16,5 @@
     {% block content %}
     {% endblock content %}
     </body>
-    <footer>
-        <div class="container my-5 pt-4 border-top">
-          <a target="_blank" href="https://github.com/Krushovice"> {% translate "My GitHub" %}</a>
-        </div>
-      </footer>
+  {% include 'footer.html' %}
 </html>
