--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -32,9 +32,9 @@
       <td>{{user.first_name}} {{user.last_name}}</td>
       <td>{{user.create_at}}</td>
       <td>
-        <a href="{% url 'user_update' %}">{% translate "Edit" %}</a>
+        <a href="{% url 'user_update' user.id %}">{% translate "Edit" %}</a>
         <br>
-        <a href="{% url 'user_delete' %}">{% translate "Delete" %}</a>
+        <a href="{% url 'user_delete' user.id %}">{% translate "Delete" %}</a>
       </td>
     </tr>
     {% endfor %}
