--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -11,7 +11,7 @@
     <script crossorigin="anonymous" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="d-flex flex-column min-vh-100">
-    {% if user_logged_in %}
+    {% if request.user.is_authenticated %}
       {% include 'components/logged_navbar.html' %}
     {% else %}
       {% include 'components/navigation.html' %}
