--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -28,7 +28,7 @@
     {% for user in users %}
     <tr>
       <td>{{user.id}}</td>
-      <td>{{user.first_name}}</td>
+      <td>{{user.username}}</td>
       <td>{{user.first_name}} {{user.last_name}}</td>
       <td>{{user.create_at}}</td>
       <td>
