--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -10,10 +10,11 @@
 
 <form action="{% url 'user_create' %}" method="post">
     {% csrf_token %}
-    <table border="1">
-       {{ form }}
-    </table>
-    <input type="submit" value="{% translate 'Save' %}">
+    {% bootstrap_form_errors form %}
+    {% bootstrap_form form %}
+
+    {% translate 'Sing up' as button_name %}
+    {% bootstrap_button button_type="submit" content=button_name %}
 </form>
 </div>
 {% endblock %}
