--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -3,6 +3,7 @@
 
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+{% bootstrap_messages %}
 <html lang="{% get_current_language as LANGUAGE_CODE %}">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +17,6 @@
     {% else %}
       {% include 'components/navigation.html' %}
     {% endif %}
-    {% include 'components/messages.html' %}
     {% block content %}
     {% endblock content %}
     </body>
