Реализовано удаление юзера в простом виде

--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -32,9 +32,13 @@
       <td>{{user.first_name}} {{user.last_name}}</td>
       <td>{{user.create_at}}</td>
       <td>
-        <a href="{{user.get_absolute_update_url}}">{% translate "Edit" %}</a>
+        <a href="{{ user.get_absolute_update_url }}">{% translate "Edit" %}</a>
         <br>
-        <a href="{{user.get_absolute_delete_url}}">{% translate "Delete" %}</a>
+        <form action="{{ user.get_absolute_delete_url }}" method="post">
+          {% csrf_token %}
+          <input type="submit" value="{% translate 'Delete' %}">
+      </form>
+
       </td>
     </tr>
     {% endfor %}
