--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -3,7 +3,7 @@
 
 {% bootstrap_css %}
 {% bootstrap_javascript %}
-{% bootstrap_messages %}
+
 <html lang="{% get_current_language as LANGUAGE_CODE %}">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,6 +17,11 @@
     {% else %}
       {% include 'components/navigation.html' %}
     {% endif %}
+    {% for message in messages %}
+      <div class="container alert-container align-items-center">
+        {% bootstrap_messages %}
+      </div>
+    {% endfor %}
     {% block content %}
     {% endblock content %}
     </body>
