--- a/task_manager/templates/statuses/index.html
+++ b/task_manager/templates/statuses/index.html
@@ -22,7 +22,7 @@
   <tr>
     <th>ID</th>
     <th>{% translate "Name" %}</th>
-    <th>{% translate "create_at" %}</th>
+    <th>{% translate "Сreate date" %}</th>
     <th></th>
   </tr>
 </thead>
