--- a/task_manager/templates/users/index.html
+++ b/task_manager/templates/users/index.html
@@ -30,11 +30,11 @@
       <td>{{user.id}}</td>
       <td>{{user.username}}</td>
       <td>{{user.first_name}} {{user.last_name}}</td>
-      <td>{{user.create_at}}</td>
+      <td>{{user.created_at}}</td>
       <td>
-        <a href="{% url 'user_update' pk=user_id %}">{% translate "Edit" %}</a>
+        <a href="{% url 'user_update' pk=user.id %}">{% translate "Edit" %}</a>
         <br>
-        <form action="{% url 'user_delete' pk=user_id %}" method="post">
+        <form action="{% url 'user_delete' pk=user.id %}" method="post">
           {% csrf_token %}
           <input type="submit" value="{% translate 'Delete' %}">
         </form>
