--- a/task_manager/templates/statuses/index.html
+++ b/task_manager/templates/statuses/index.html
@@ -31,14 +31,11 @@
     <tr>
       <td>{{ status.id }}</td>
       <td>{{ status.name }}</td>
-      <td>{{ status.timestamp }}</td>
+      <td>{{ status.created_at }}</td>
       <td>
         <a href="{% url 'status_update' pk=status.id %}">{% translate "Update" %}</a>
         <br>
-        <form action="{% url 'status_delete' pk=status.id %}" method="post">
-          {% csrf_token %}
-          <input type="submit" value="{% translate 'Delete' %}">
-        </form>
+        <a href="{% url 'status_delete' pk=status.id %}">{% translate "Delete" %}</a>
       </td>
     </tr>
     {% endfor %}
