--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
-  {% block content %}
+
+{% load django_bootstrap5 i18n %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% block content %}
 
   <div class="container wrapper flex-grow-1">
 
@@ -7,11 +14,11 @@
 
     <h1 class="my-4">
 
-Задачи
+{% translate "Tasks" %}
 
     </h1>
 
-<a class="btn btn-primary mb-3" href="/tasks/create/" role="button">Создать задачу</a>
+<a class="btn btn-primary mb-3" href="{% url 'task_create' %}" role="button">{% translate "Create task" %}</a>
 
 
 
@@ -19,21 +26,17 @@
 <div class="card mb-3">
 <div class="card-body bg-light">
   <form class="form-inline center" method="get">
-    <div class="mb-3"><label class="form-label" for="id_status">Статус</label><select name="status" class="form-select" id="id_status">
+    <div class="mb-3"><label class="form-label" for="id_status">{% translate "Status" %}</label><select name="status" class="form-select" id="id_status">
 <option value="" selected="">---------</option>
 </select></div>
-    <div class="mb-3"><label class="form-label" for="id_executor">Исполнитель</label><select name="executor" class="form-select" id="id_executor">
+    <div class="mb-3"><label class="form-label" for="id_executor">{% translate "Executor" %}</label><select name="executor" class="form-select" id="id_executor">
 <option value="" selected="">---------</option>
 </select></div>
-    <div class="mb-3"><label class="form-label" for="id_label">Метка</label><select name="label" class="form-select" id="id_label">
+    <div class="mb-3"><label class="form-label" for="id_label">{% translate "Label" %}</label><select name="label" class="form-select" id="id_label">
 <option value="" selected="">---------</option>
-
-<option value="1">Ленивый</option>
-
-<option value="2">Срочно</option>
-
-<option value="3">Не срочно</option>
-
+{% for label in labels %}
+<option value="1">{{label.name}}</option>
+{% endfor %}
 </select></div>
     <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">Только свои задачи</label></div></div>
       <input class="btn btn-primary" type="submit" value="Показать">
@@ -46,29 +49,29 @@
 <thead>
   <tr>
     <th>ID</th>
-    <th>Имя</th>
-    <th>Статус</th>
-    <th>Автор</th>
-    <th>Исполнитель</th>
-    <th>Дата создания</th>
+    <th>{% translate "Name" %}</th>
+    <th>{% translate "Status" %}</th>
+    <th>{% translate "Author" %}</th>
+    <th>{% translate "Executor" %}</th>
+    <th>{% translate "Create date" %}</th>
     <th></th>
   </tr>
 </thead>
 <tbody>
   {% for task in tasks %}
     <tr>
-      <td>{{task.id}}</td>
+      <td>{{task.pk}}</td>
       <td>
-         <a href="{% url 'task_show' id=task.id %}">{{task.name}}</a>
+         <a href="{% url 'task_show' pk=task_id %}">{{task.name}}</a>
       </td>
       <td></td>
       <td></td>
       <td></td>
-      <td>{{task.timestamp}}</td>
+      <td>{{task.created_at}}</td>
       <td>
-        <a href="">Изменить</a>
+        <a href="{% url 'task_udpate' pk=task_id %}">{% translate "Update" %}</a>
         <br>
-        <a href="">Удалить</a>
+        <a href="{% url 'task_delete' pk=task_id %}">{% translate "Delete" %}</a>
       </td>
     </tr>
   {% endfor %}
