--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -26,20 +26,32 @@
 <div class="card mb-3">
 <div class="card-body bg-light">
   <form class="form-inline center" method="get">
-    <div class="mb-3"><label class="form-label" for="id_status">{% translate "Status" %}</label><select name="status" class="form-select" id="id_status">
-<option value="" selected="">---------</option>
-</select></div>
-    <div class="mb-3"><label class="form-label" for="id_executor">{% translate "Executor" %}</label><select name="executor" class="form-select" id="id_executor">
-<option value="" selected="">---------</option>
-</select></div>
-    <div class="mb-3"><label class="form-label" for="id_label">{% translate "Label" %}</label><select name="label" class="form-select" id="id_label">
-<option value="" selected="">---------</option>
-{% for label in labels %}
-<option value="1">{{label.name}}</option>
-{% endfor %}
-</select></div>
+    <div class="mb-3"><label class="form-label" for="id_status">{% translate "Status" %}</label>
+      <select name="status" class="form-select" id="id_status">
+          <option value="" selected="">---------</option>
+          {% for status in statuses %}
+            <option value="{{status.id}}">{{status.name}}</option>
+          {% endfor %}
+      </select>
+    </div>
+    <div class="mb-3"><label class="form-label" for="id_executor">{% translate "Executor" %}</label>
+      <select name="executor" class="form-select" id="id_executor">
+          <option value="" selected="">---------</option>
+          {% for executor in executors %}
+            <option value="{{executor.id}}">{{executor.first_name}} {{executor.last_name}}</option>
+          {% endfor %}
+      </select>
+    </div>
+    <div class="mb-3"><label class="form-label" for="id_label">{% translate "Label" %}</label>
+      <select name="label" class="form-select" id="id_label">
+          <option value="" selected="">---------</option>
+          {% for label in labels %}
+            <option value="{{label.id}}">{{label.name}}</option>
+          {% endfor %}
+      </select>
+    </div>
     <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">Только свои задачи</label></div></div>
-      <input class="btn btn-primary" type="submit" value="Показать">
+      <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
   </form>
 </div>
 </div>
@@ -60,18 +72,22 @@
 <tbody>
   {% for task in tasks %}
     <tr>
-      <td>{{task.pk}}</td>
+      <td>{{task.id}}</td>
       <td>
-         <a href="{% url 'task_show' pk=task_id %}">{{task.name}}</a>
+         <a href="{% url 'task_show' pk=task.id %}">{{task.name}}</a>
       </td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>{{task.status.name}}</td>
+      <td>
+        {{task.author.first_name}}
+        <br>
+        {{task.author.last_name}}
+      </td>
+      <td>{{task.executor.username}}</td>
       <td>{{task.created_at}}</td>
       <td>
-        <a href="{% url 'task_udpate' pk=task_id %}">{% translate "Update" %}</a>
+        <a href="{% url 'task_update' pk=task.id %}">{% translate "Update" %}</a>
         <br>
-        <a href="{% url 'task_delete' pk=task_id %}">{% translate "Delete" %}</a>
+        <a href="{% url 'task_delete' pk=task.id %}">{% translate "Delete" %}</a>
       </td>
     </tr>
   {% endfor %}
