--- a/task_manager/templates/tasks/show.html
+++ b/task_manager/templates/tasks/show.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% load django_bootstrap5 i18n %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
 {% block content %}
     <div class="container wrapper flex-grow-1">
 
@@ -7,7 +13,7 @@
 
       <h1 class="my-4">
 
-Просмотр задачи
+{% translate 'View a task' %}
 
       </h1>
 
@@ -20,36 +26,42 @@
     <hr>
     <div class="container">
       <div class="row p-1">
-        <div class="col">Автор</div>
-        <div class="col"></div>  # Имя автора
+        <div class="col">{% translate 'Author' %}</div>
+        <div class="col">{{task.author}}</div>
       </div>
       <div class="row p-1">
-        <div class="col">Исполнитель</div>
-        <div class="col"></div>  № имя исполнителя
+        <div class="col">{% translate 'Executor' %}</div>
+        {% if task.executor %}
+          <div class="col">{{task.executor}}</div>
+        {% else %}
+          <div class="col"></div>
+        {% endif %}
       </div>
       <div class="row p-1">
-        <div class="col">Статус</div>
-        <div class="col"></div>  # тут должен быть статус
+        <div class="col">{% translate 'Status' %}</div>
+        <div class="col">{{task.status}}</div>
       </div>
       <div class="row p-1">
-        <div class="col">Дата создания</div>
-        <div class="col">{{task.timestamp}}</div>
+        <div class="col">{% translate 'Create date' %}</div>
+        <div class="col">{{task.created_at}}</div>
       </div>
       <div class="row p-1">
         <div class="col">
-          <h6>Метки:</h6>
+          <h6>{% translate 'Labels'%}:</h6>
+          {% for label in task.labels.all %}
           <ul>
 
-              <li></li>  # метка
+              <li>{{label.name}}</li>
 
           </ul>
+          {% endfor %}
         </div>
       </div>
       <div class="row p-1">
         <div class="col">
-          <a href="{/tasks/2/update/}">Изменить</a>
+          <a href="{% url 'task_update' pk=task_id%}">{% translate 'Edit' %}</a>
           <br>
-          <a href="/tasks/2/delete/">Удалить</a>
+          <a href="{% url 'task_delete' pk=task_id%}">{% translate 'Delete' %}</a>
         </div>
       </div>
     </div>
