Испрвлена проблема с переводом

--- a/task_manager/templates/statuses/delete.html
+++ b/task_manager/templates/statuses/delete.html
@@ -14,7 +14,7 @@
 
     </h1>
     {% with status_name=status.name %}
-    <p>{% blocktranslate %}Do you want to delete {{ status_name }}?{% endblocktranslate %}</p>
+    <p>{% blocktranslate %} Are you sure you want to delete{{ status_name }}?{% endblocktranslate %}</p>
     {%endwith%}
 <form method="post">
 <input type="hidden" name="csrfmiddlewaretoken" value="juVR3xEAh5YTsuhrKTjq4nG1ciIcPZ705folK3D39SpVYiOlfWlRm2R5aValfBZ8">
