--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -13,7 +13,7 @@
 
     </h1>
     {% with user_first_name=user.first_name user_last_name=user.last_name %}
-    <p>{% blocktranslate %}Do you want to delete {{ user_first_name }} {{ user_last_name }}?{% endblocktranslate %}</p>
+    <p>{% blocktranslate %} Are you sure you want to delete {{ user_first_name }} {{ user_last_name }}?{% endblocktranslate %}</p>
     {%endwith%}
 <form method="post">
 <input type="hidden" name="csrfmiddlewaretoken" value="juVR3xEAh5YTsuhrKTjq4nG1ciIcPZ705folK3D39SpVYiOlfWlRm2R5aValfBZ8">
