--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -50,7 +50,7 @@
           {% endfor %}
       </select>
     </div>
-    <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">Только свои задачи</label></div></div>
+    <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">{% translate 'Only self tasks' %}</label></div></div>
       <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
   </form>
 </div>
@@ -70,7 +70,7 @@
   </tr>
 </thead>
 <tbody>
-  {% for task in tasks %}
+  {% for task in filter.qs %}
     <tr>
       <td>{{task.id}}</td>
       <td>
