--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -13,7 +13,7 @@
     {% bootstrap_form_errors form %}
     {% bootstrap_form form %}
 
-    {% translate 'Sing up' as button_name %}
+    {% translate 'Register' as button_name %}
     {% bootstrap_button button_type="submit" content=button_name %}
 </form>
 </div>
