--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -8,54 +8,49 @@
 
 {% block content %}
 
-  <div class="container wrapper flex-grow-1">
-
-
-
-    <h1 class="my-4">
-
-{% translate "Tasks" %}
-
-    </h1>
-
-<a class="btn btn-primary mb-3" href="{% url 'task_create' %}" role="button">{% translate "Create task" %}</a>
-
-
-
-
+<div class="container wrapper flex-grow-1">
+  <h1 class="my-4">{% translate "Tasks" %}</h1>
+  <a class="btn btn-primary mb-3" href="{% url 'task_create' %}" role="button">{% translate "Create task" %}</a>
 <div class="card mb-3">
 <div class="card-body bg-light">
   <form class="form-inline center" method="get">
-    <div class="mb-3"><label class="form-label" for="id_status">{% translate "Status" %}</label>
-      <select name="status" class="form-select" id="id_status">
-          <option value="" selected="">---------</option>
+    <div class="mb-3">
+      <label class="form-label" for="id_status">{% translate "Status" %}</label>
+      <select name="status" class="form-select is_valid" id="id_status">
+          <option value="">---------</option>
           {% for status in statuses %}
-            <option value="{{status.id}}">{{status.name}}</option>
+            <option value="{{ status.id }}" {% if request.GET.status == status.id|stringformat:"s" %}selected{% endif %}>{{ status.name }}</option>
           {% endfor %}
       </select>
     </div>
-    <div class="mb-3"><label class="form-label" for="id_executor">{% translate "Executor" %}</label>
-      <select name="executor" class="form-select" id="id_executor">
-          <option value="" selected="">---------</option>
+    <div class="mb-3">
+      <label class="form-label" for="id_executor">{% translate "Executor" %}</label>
+      <select name="executor" class="form-select is_valid" id="id_executor">
+          <option value="" selected>---------</option>
           {% for executor in executors %}
-            <option value="{{executor.id}}">{{executor.first_name}} {{executor.last_name}}</option>
+            <option value="{{executor.id}}" {% if request.GET.executor == executor.id|stringformat:"s" %}selected{% endif %}>{{executor.first_name}} {{executor.last_name}}</option>
           {% endfor %}
       </select>
     </div>
-    <div class="mb-3"><label class="form-label" for="id_label">{% translate "Label" %}</label>
-      <select name="labels" class="form-select" id="id_label">
-          <option value="" selected="">---------</option>
+    <div class="mb-3">
+      <label class="form-label" for="id_label">{% translate "Label" %}</label>
+      <select name="label" class="form-select is_valid" id="id_label">
+          <option value="" selected>---------</option>
           {% for label in labels %}
-            <option value="{{label.id}}">{{label.name}}</option>
+            <option value="{{label.id}}" {% if request.GET.label == label.id|stringformat:"s" %}selected{% endif %}>{{label.name}}</option>
           {% endfor %}
       </select>
     </div>
-    <div class="mb-3"><div class="form-check"><input type="checkbox" name="self_tasks" class="form-check-input" id="id_self_tasks"><label class="form-check-label" for="id_self_tasks">{% translate 'Only self tasks' %}</label></div></div>
-      <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
+    <div class="mb-3">
+      <div class="form-check">
+        <input type="checkbox" name="self_tasks" class="form-check-input is_valid" id="id_self_tasks" {% if request.GET.self_tasks %}checked{% endif %} сhecked>
+        <label class="form-check-label" for="id_self_tasks">{% translate 'Only self tasks' %}</label>
+      </div>
+    </div>
+    <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
   </form>
+ </div>
 </div>
-</div>
-
 
 <table class="table table-striped">
 <thead>
@@ -93,8 +88,6 @@
   {% endfor %}
 </tbody>
 </table>
-
-  </div>
-
+</div>
 </body>
 {% endblock %}
